# test_tasks

./: .env.example  docker-compose.yml  instructions.md  pyproject.toml  run_tests.sh
backend/: Dockerfile
backend/backend/: settings.py  urls.py
backend/tasks/: filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_auto_20210127_1823.py  0003_remove_task_due.py  0004_auto_20210127_2315.py  0005_auto_20210128_0705.py
